// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should allow Breadcrumb.Item is null or undefined 1`] = `
<nav class="ant-breadcrumb">
  <ol>
    <li><span class="ant-breadcrumb-link">Home</span><span class="ant-breadcrumb-separator">/</span></li>
  </ol>
</nav>
`;

exports[`Breadcrumb should not display Breadcrumb Item when its children is falsy 1`] = `
<nav class="ant-breadcrumb">
  <ol>
    <!---->
    <li><span class="ant-breadcrumb-link">xxx</span><span class="ant-breadcrumb-separator">/</span></li>
    <li><span class="ant-breadcrumb-link">yyy</span><span class="ant-breadcrumb-separator">/</span></li>
  </ol>
</nav>
`;

exports[`Breadcrumb should render a menu 1`] = `
<nav class="ant-breadcrumb">
  <ol>
    <li><span class="ant-breadcrumb-link"><a href="#/index">home</a></span><span class="ant-breadcrumb-separator">/</span></li>
    <li>
      <!----><span class="ant-breadcrumb-overlay-link ant-dropdown-trigger"><span class="ant-breadcrumb-link"><a href="#/index/first">first</a></span><span role="img" aria-label="down" class="anticon anticon-down"><svg focusable="false" class="" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></span></span><span class="ant-breadcrumb-separator">/</span>
    </li>
    <li><span class="ant-breadcrumb-link"><span>second</span></span><span class="ant-breadcrumb-separator">/</span></li>
  </ol>
</nav>
`;

exports[`Breadcrumb should support Breadcrumb.Item default separator 1`] = `
<nav class="ant-breadcrumb">
  <ol>
    <li><span class="ant-breadcrumb-link">Location</span><span class="ant-breadcrumb-separator">/</span></li><span><li><span class="ant-breadcrumb-link">Mock Node</span><span class="ant-breadcrumb-separator">/</span></li></span>
    <li><span class="ant-breadcrumb-link">Application Center</span><span class="ant-breadcrumb-separator">/</span></li>
  </ol>
</nav>
`;

exports[`Breadcrumb should support custom attribute 1`] = `
<nav data-custom="custom" class="ant-breadcrumb">
  <ol>
    <li><span class="ant-breadcrumb-link" data-custom="custom-item">xxx</span><span class="ant-breadcrumb-separator">/</span></li>
    <li><span class="ant-breadcrumb-link">yyy</span><span class="ant-breadcrumb-separator">/</span></li>
  </ol>
</nav>
`;
